--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.63.3"
+    "sass": "^1.63.3",
+    "swiper": "^9.4.1"
   }
 }
