--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "framer-motion": "^10.12.16",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
